--- a/hello-near/contract/Cargo.toml
+++ b/hello-near/contract/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 [dependencies]
 near-sdk = "4.0.0"
 uint = { version = "0.9.3", default-features = false }
+rand = "0.8.3"
 
 [profile.release]
 codegen-units = 1
